@startuml ViewCalendarCommandClassDiagram
hide circle
skinparam classAttributeIconSize 0

abstract class Command {
	+execute(...) : void
}

class ViewCalendarCommand {
	-targetMonth : YearMonth
	+execute(...) : void
}

class WorkoutList {
	+getSize() : int
	+getWorkoutAtIndex(index : int) : Workout
}

abstract class Workout {
	+getDate() : LocalDate
}

class Ui {
	+showCalendar(targetMonth : YearMonth, activeDays : Set<Integer>) : void
	+showMessage(message : String) : void
	+showLine() : void
}

Command <|-- ViewCalendarCommand
ViewCalendarCommand ..> WorkoutList
ViewCalendarCommand ..> Workout
ViewCalendarCommand ..> Ui
WorkoutList --> "*" Workout
@enduml
